# Strace

./: CMakeLists.txt  Makefile  README.md
include/: strace.h
src/: main.c  print_signal.c  print_syscall.c  strace.c  syscall_table.c  utils.c
